# job-portal-group-12

./: .gitignore  Dockerfile  PRESENTATION.md  README.md  docker-compose.yml  package-lock.json  package.json  test-social.js  test_file_service.sh
.aiassistant/rules/: AGENT.md
.github/workflows/: deploy.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: admin.guard.ts  auth.controller.ts  auth.module.ts  auth.service.ts  authenticated.guard.ts  encrypted-payload.dto.ts  passkey-credential.entity.ts  payload-encryption.service.ts  session.entity.ts
backend/src/common/: sheep-file.service.ts
backend/src/notifications/: notifications.controller.ts  notifications.gateway.ts  notifications.module.ts  notifications.service.ts
backend/src/upload/: upload.controller.ts  (+1 more)
data_transfer/: package.json
data_transfer/src/: sample.ts
file_service/: Cargo.toml  sheep.toml
file_service/src/: main.rs
frontend/: .gitignore  DESIGN_RULES.md  Dockerfile  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.js  main.ts
presentation/: .dockerignore  README.md  index.html  package.json
presentation/assets/: custom.css
progress_book/: .dockerignore  Dockerfile  book.toml
progress_book/src/: SUMMARY.md  chapter_1.md  cover.md  introduction.md  member_contributions.md  table_of_contents.md  week_01.md  week_02.md  week_03.md  week_04.md  week_05.md  week_06.md  week_07.md  week_08.md  week_09.md  week_10.md  week_11.md
(+206 files in other folders)
