[package]
name = "file_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["multipart"] }
bytes = "1.11.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
